fix: discord cards horizontal overflow

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -85,6 +85,11 @@
   display: flex;
   justify-content: space-between;
   margin: 40px 0;
+  flex-wrap: wrap;
+}
+
+.hero__servers > div {
+  margin-bottom: 48px;
 }
 
 /*
